background.jpg added to images folder.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header class="header">
+      <style></style>
       <div class="logo">
         <img
           id="logo-image"
