--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <header class="header">
       <style></style>
       <div class="logo">
-        <img
-          id="logo-image"
-          src="assets/images/logo.png"
-          alt="Math learning game"
-        />
+        <img id="logo-image" src="assets/images/logo.png" alt="Math learning game"/>
       </div>
       <div>
         <h1 id="htitle">
