header text has been changed

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <header class="header">
       <style></style>
       <div class="logo">
-        <img id="logo-image" src="assets/images/logo.png" alt="Math learning game"/>
+        <img
+          id="logo-image"
+          src="assets/images/logo.png"
+          alt="Math learning game"
+        />
       </div>
       <div>
-        <h1 id="htitle">
-          "Summation Mastery: Exploring 10s with Math Marvels"
-        </h1>
+        <h1 id="htitle">"Exploring 10s with Math Marvels"</h1>
         <p class="hdescription">Play and learn adding up to 10!</p>
       </div>
     </header>
