Question area div added to index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
             <button data-type="" id="submit-btn" class="blue-btn" aria-label="start and reset the game">Play with me</button>
     </div>
     <div class="game-area">
-
+         <div class="question-area"></div>
+         <span id="operand1">0</span>
+         <span id="operator">+</span>
+         <span id="operand2">1</span>
+        <span>=</span>
+        <p class="answer-message">Enter answer</p>
     </div>
 
     <div class="score-area">
