Add structure to gameing area.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
          <span id="operand2">1</span>
         <span>=</span>
         <p class="answer-message">Enter answer</p>
+        <input id="answer-box" type="number">
+        <button class="btn btn--gray">Submit answer </button>
     </div>
 
     <div class="score-area">
