--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
          <span id="operand1">0</span>
          <span id="operator">+</span>
          <span id="operand2">1</span>
-        <span>=</span>
+       
+        <button class="a-btn" id="btn1" aria-label="answer button1" >4</button>
+        <button class="a-btn" id="btn2" aria-label="answer button2" >5</button>
+
         <p class="answer-message">Enter answer</p>
         <input id="answer-box" type="number">
         <button class="btn btn--gray">Submit answer </button>
