--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
+
   <body>
     <header class="header">
       <style></style>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="score-area">
-        <p class="scores">Correct answers <span id="score"></span></p>
+        <p class="scores">Correct answers: 0<span id="score"></span></p>
     </div>
     <script src="assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/2b81d65df0.js" crossorigin="anonymous"></script>
