--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <button data-type="" id="submit-btn" class="blue-btn" aria-label="start and reset the game">Play with me</button>
     </div>
     <div class="game-area">
-        <button class="btn btn--big btn--red" id="start-btn" aria-label="start button">Start</button>
-        <button class="btn btn--big btn--green" aria-label="reset button">Reset</button>
+        <button data-type="addition" class="btn btn--big btn--red" id="start-btn" aria-label="start button">Start</button>
+        <button data-type="" class="btn btn--big btn--green" aria-label="reset button">Reset</button>
 
         <p id="tdisplay">
             <i id="timer" class="fa-solid fa-hourglass"></i>
@@ -43,12 +43,13 @@
         </p>
 
          <div class="question-area"></div>
-         <span id="operand1">0</span>
+         <span id="operand1">1</span>
          <span id="operator">+</span>
-         <span id="operand2">1</span>
+         <span id="operand2">3</span>
+         <span>=</span>
        
-        <button class="a-btn" id="btn1" aria-label="answer button1" >4</button>
-        <button class="a-btn" id="btn2" aria-label="answer button2" >5</button>
+        <button data-type="" class="a-btn" id="btn1" aria-label="answer button1" >4</button>
+        <button data-type="" class="a-btn" id="btn2" aria-label="answer button2" >5</button>
 
     </div>
 
