--- a/index.html
+++ b/index.html
@@ -26,37 +26,78 @@
 
     <p id="question">What is the correct answer?</p>
 
-    <div>
+    <div id="game">
+      <div>
         <div id="user-input">
-            <p id="mtext">Hi, I'm Turtley.<br>What's your name?</p>
-            <label for="user"></label>
-            <input type="text" id="user" name="user" maxlength=10 placeholder="Type your name">
-            <button data-type="" id="submit-btn" class="blue-btn" aria-label="start and reset the game">Play with me</button>
-    </div>
-    <div class="game-area">
-        <button data-type="addition" class="btn btn--big btn--red" id="start-btn" aria-label="start button">Start</button>
-        <button data-type="" class="btn btn--big btn--green" aria-label="reset button">Reset</button>
+          <p id="mtext">Hi, I'm Turtley.<br />What's your name?</p>
+          <label for="user"></label>
+          <input
+            type="text"
+            id="user"
+            name="user"
+            maxlength="10"
+            placeholder="Type your name..."
+          />
+          <button
+            id="submit-btn"
+            class="blue-btn"
+            aria-label="start and reset the game"
+          >
+            Play with me
+          </button>
+        </div>
 
-        <p id="tdisplay">
-            <i id="timer" class="fa-solid fa-hourglass"></i>
-            <span id="seconds">45</span>
-        </p>
+        <div class="game-area">
+          <i class="fa-regular fa-circle-info"></i>
+          <button
+            class="btn btn--big btn--red"
+            id="start-btn"
+            aria-label="start button"
+          >
+            Start
+          </button>
+          <button class="btn btn--big btn--green" aria-label="reset button">
+            Reset
+          </button>
 
-         <div class="question-area"></div>
-         <span id="operand1">1</span>
-         <span id="operator">+</span>
-         <span id="operand2">3</span>
-         <span>=</span>
-       
-        <button data-type="" class="a-btn" id="btn1" aria-label="answer button1" >4</button>
-        <button data-type="" class="a-btn" id="btn2" aria-label="answer button2" >5</button>
+          <p><i id="timer" class="fa-solid fa-hourglass"></i></p>
+        </div>
 
-    </div>
+        <div id="operation" class="question-area"></div>
+        <span id="operand1">1</span>
+        <span id="operator">+</span>
+        <span id="operand2">3</span>
 
-    <div class="score-area">
+        <button
+          data-type="addition"
+          class="btn"
+          id="btn1"
+          aria-label="answer button1"
+          onclick="checkAnswer(1)"
+        >
+          -
+        </button>
+        <button
+          data-type="addition"
+          class="btn"
+          id="btn2"
+          aria-label="answer button2"
+          onclick="checkAnswer(2)"
+        >
+          -
+        </button>
+      </div>
+
+      <div class="score-area">
         <p class="scores">Correct answers: 0<span id="score"></span></p>
+      </div>
     </div>
+
     <script src="assets/js/script.js"></script>
-    <script src="https://kit.fontawesome.com/2b81d65df0.js" crossorigin="anonymous"></script>
+
+    <script
+      src="https://kit.fontawesome.com/2b81d65df0.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
