--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div id="game">
-      <div>
+      <div id="game-text"></div>
         <div class="game-area">
           <i class="fa-regular fa-circle-info"></i>
           <p id="question">What is the correct answer?</p>
