Correct answer div put inside the game div.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           class="btn"
           id="btn1"
           aria-label="answer button1"
-          onclick="checkAnswer(1)"
+          onclick="checkAnswer()"
         >
           -
         </button>
@@ -81,14 +81,13 @@
           class="btn"
           id="btn2"
           aria-label="answer button2"
-          onclick="checkAnswer(2)"
+          onclick="checkAnswer()"
         >
           -
         </button>
-      </div>
-
-      <div class="score-area">
-        <p class="scores">Correct answers: 0<span id="score"></span></p>
+        <div class="score-area">
+            <p class="scores">Correct answers: 0<span id="score"></span></p>
+        </div>
       </div>
     </div>
 
