Info button added to game area.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
     </div>
 
     <div id="game">
-      <div id="game-text"></div>
+      <button id="rules-btn">
+        <i class="fa fa-info-circle" aria-hidden="true"></i>
+      </button>
 
+      <div id="game-text"></div>
       <div class="game-area">
-        <i class="fa-regular fa-circle-info"></i>
         <button
           class="btn btn--big btn--red"
           id="start-btn"
