Happy and crying face added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </div>
 
     <div id="game">
+      <span id="cry">&#128526;</span>
+      <span id="happy">&#128557;</span>
       <button id="rules-btn">
         <i class="fa fa-info-circle" aria-hidden="true"></i>
       </button>
@@ -101,7 +103,7 @@
       </div>
     </div>
 
-    <div class="instructions-area">
+    <div id="instructions-area">
       <p class="instructions">Click on the Start button to PLAY the game.</p>
       <p class="instructions">You will see the addition of two numbers.</p>
       <p class="instructions">I will give you 2 answers.</p>
