div ID instructions-area changed to instruction-area

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
       </div>
     </div>
 
-    <div id="instructions-area">
+    <div id="instruction-area">
+      <button id="close-btn">&times;</button>
       <p class="instructions">Click on the Start button to PLAY the game.</p>
       <p class="instructions">You will see the addition of two numbers.</p>
       <p class="instructions">I will give you 2 answers.</p>
@@ -119,17 +120,6 @@
         score.
       </p>
       <p class="instructions">Have fun!</p>
-      <button
-        id="audio-btn"
-        class="btn__navigation--back"
-        aria-label="read rules by Bob"
-      >
-        <i id="off" class="fa-solid fa-volume-xmark" style="display: none"></i>
-        <i id="on" class="fa-solid fa-volume-high" style="display: block"></i>
-      </button>
-      <audio id="welcome" src="assets/bob-speak.mp3">
-        Your browser does not support the audio element.
-      </audio>
     </div>
 
     <script src="assets/js/script.js"></script>
