meta name and keywords added to head section.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Math with Turtley is a guess game for kids to learn adding numbers to 10."
+    />
+    <meta
+      name="keywords"
+      content=" Math, learn sum up, addition, count to 10, grammar quiz,"
+    />
+    <meta name="author" content="Gabor Erdei" />
+    <!-- Link to the css file -->
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Math with Turtley/title>
+    <title>Math with Turtley</title>
   </head>
 
   <body>
