Images uploaded for the readme.md file documentation and favico added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       content=" Math, learn sum up, addition, count to 10, grammar quiz,"
     />
     <meta name="author" content="Gabor Erdei" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/images/favicon.ico" />
     <!-- Link to the css file -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Math with Turtley</title>
